--- a/KGERP/Views/BillRequisition/BillOfQuotation.cshtml
+++ b/KGERP/Views/BillRequisition/BillOfQuotation.cshtml
@@ -119,8 +119,8 @@
                                                     </td>
                                                     <td id="tdRequisitionBoQName_@item.BoQItemId">@item.Name</td>
                                                     <td id="tdRequisitionBoQProjectName_@item.BoQItemId">@Model.Accounting_CostCenters.FirstOrDefault(c=> c.CostCenterId == item.CostCenterId).Name</td>
-                                                    <td id="tdRequisitionBoQQuantity_@item.BoQItemId">@item.BoQQty</td>
-                                                    <td id="tdRequisitionBoQAmount_@item.BoQItemId">@item.BoQAmount</td>
+                                                    <td id="tdRequisitionBoQQuantity_@item.BoQItemId" class="text-right">@item.BoQQty</td>
+                                                    <td id="tdRequisitionBoQAmount_@item.BoQItemId" class="text-right">@item.BoQAmount</td>
                                                     <td id="tdRequisitionBoQDescription_@item.BoQItemId">@item.Description</td>
                                                     <td>
                                                         <a id="@item.BoQItemId" onclick="makeEditble(this);" class="linkPointer" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
