--- a/KGERP/Views/BillRequisition/BillRequisitionMasterList.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionMasterList.cshtml
@@ -92,9 +92,9 @@
                                         <th>Req. Type</th>
                                         <th>P. Type</th>
                                         <th>Project </th>
-                                        <th>Status</th>
-                                        <th>Action</th>
-                                        <th>Change Status</th>
+                                        <th style="text-align:right">Total</th>
+                                        <th style="text-align:center">Action</th>
+                                        <th style="text-align:center">Change Status</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -122,8 +122,8 @@
                                             <td>@item.ProjectTypeName</td>
                                             <td>@item.CostCenterName</td>
 
-                                            <td>@item.StatusName</td>
-                                            <td>
+                                            <td style="text-align:right">@String.Format("{0:0.00}", item.TotalAmount)</td>
+                                            <td style="text-align:center">
                                                 @if (item.StatusId == EnumBillRequisitionStatus.Draft || item.StatusId == EnumBillRequisitionStatus.Submitted)
                                                 {
                                                     if (item.StatusId != EnumBillRequisitionStatus.Submitted)
@@ -141,7 +141,7 @@
 
                                                 }
                                             </td>
-                                            <td>
+                                            <td style="text-align:center">
                                                 @if (item.StatusId == EnumBillRequisitionStatus.Draft)
                                                 {
                                                     <a id="@item.BillRequisitionMasterId" onclick="makeSubmitble(@item.BillRequisitionMasterId)" class="linkPointer" data-toggle="modal" data-target="#submitBillRequisitionMastermodal" title="@statusTitle" data-placement="top">
